Added functionality to Inbox and Starred

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@
 
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
+  cursor:pointer;
 }
 
 .app > .left-menu .inbox-list .item.active {
